2005-10-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/SignatureWriter.cs:
		Correct a bug in strings encoding in custom attributes.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Implement a big of public key management,
		here we reserve space for the strong name
		signature if needed.

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/StructureReader.cs:
		Disable public key writing until
		it is implemented.

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/TypeReference.cs
	  Mono.Cecil/MethodReference.cs:
		Work on generics writing api.
	* Mono.Cecil/ReflectionReader.cs:
		Fix a bug when defining a fresh assembly.

	* Mono.Cecil/GenericInstanceType.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/IGenericParameterProvider.cs
	  Mono.Cecil.Signatures/Var.cs
	  Mono.Cecil.Signatures/MVar.cs
	  Mono.Cecil.Signatures/SignatureReader.cs
	  Mono.Cecil.Signatures/SignatureWriter.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Work on generics writing.

2005-10-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CilWorker.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/OpCode.cs:
		Override op == and != on opcodes.

	* Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs:
		Fix setters working on attributes.

	* Mono.Cecil.Cil/CodeWriter.cs:
		Compute max stack before writing method.

	* Mono.Cecil/GenericContext.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil.Signatures/SignatureReader.cs:
		Work on generics support.

	* CodeGen/cecil.xml
	  Mono.Cecil/ISecurityDeclarationCollection.cs
	  Mono.Cecil/SecurityDeclarationCollection.cs:
		Remove the security declaration from the codegen.

2005-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil\SecurityDeclaration.cs